test/Fail/Issue3592-1.agda
postulate
  I : Set
  f : Set → I

mutual

  data P : I → Set where

  Q : I → Set
  Q x = P (f (P x))
